--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.1",
     "cross-env": "^7.0.3",
+    "formik": "^2.2.9",
+    "google-libphonenumber": "^3.2.31",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
@@ -18,7 +20,8 @@
     "react-scripts": "^5.0.1",
     "react-social-icons": "^5.15.0",
     "sass": "^1.55.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
